Mais um projeto finalizado, graças a Deus

--- a/index.html
+++ b/index.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <title>Product card</title>
+<html lang="en">
 
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <title>Product card</title>
+  <link rel="stylesheet" href="style.css">
 
-    Preview
+</head>
 
-    Gabrielle Essence Eau De Parfum
+<body>
+  <section class="container">
 
-    A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-    Perfumer-Creator for the House of CHANEL.
+    <div class="esquerda">
 
-    $149.99
-    $169.99
+      <img src="./images/image-product-mobile.jpg" alt="">
+      <img class="desktop" src="./images/image-product-desktop.jpg" alt="">
 
-    Add to Cart
-    
-  </body>
+    </div>
+
+    <div class="direita">
+      <p class="cabecalhoRight">
+        PERFUME
+      </p>
+      <div>
+        <h1>
+          Gabrielle Essence Eau De Parfum
+        </h1>
+      </div>
+
+      <div class="texto">
+        <p>
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the
+          House of CHANEL.
+        </p>
+      </div>
+
+      <div class="valores">
+        <span class="preco">$149,99 </span> <span class="precoAnterior"> $169.99</span>
+      </div>
+
+      <button>
+        <img src="./images/icon-cart.svg" alt=""/>
+        Add to Cart
+      </button>
+    </div>
+  </section>
+</body>
+
 </html>
